Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19043

Fullscreen main window with softkeys initially layouts using full screen dimensions instead of client area dimensions

    XMLWordPrintable

Details

    • e8fc93973a41f193665baa5fdc26cba951bd692f

    Description

      Fullscreen main window with softkeys initially layouts using full screen dimensions instead of client area dimensions. I'm pretty sure this was working fairly recently, so it's a regression.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes