Fix initial main window dimensions for "fullscreen with softkeys" case

The application main window defaults to fullscreen size when initially
constructed, even if softkeys are specified for it, as the screen
furniture is constructed later in show_sys. This resulted in the main
window being partially under softkeys.
Fixed by invoking handleClientAreaChange() explicitly in show_sys in
fullscreen with softkeys case.

Task-number: QTBUG-19043
Reviewed-by: Sami Merila
(cherry picked from commit e8fc93973a41f193665baa5fdc26cba951bd692f)

cregit: a2e836f3c1acaef5e41893d1c4eb1ef8674b315e https://github.com/qt/qtbase/commit/a2e836f3c1acaef5e41893d1c4eb1ef8674b315e